<resources>
    <string name="app_name">TravelTimeLog</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember Me</string>
    <string name="repeat_user_name">Repeat User Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="match_warning">Sorry, this username already exist</string>
    <string name="InputWarning">Check you input</string>
    <string name="notFoundWarning">Sorry, Username and Password don\'t match :(</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="add_current_location">Add Current Location</string>
    <string name="add_by_adress">Add By Adress</string>
    <string name="address">Address</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="add_by_coordinates">Add By Coordinates</string>
    <string name="sattelite_warning">Sorry GPS can\'t find satellite</string>
    <string name="lat_lon_input_warning">Check you values of latitude and longitude</string>
    <string name="times">times</string>
    <string name="slatitude">latitude</string>
    <string name="slongitude">longitude</string>
    <string name="position">POSITION</string>
    <string name="name">name</string>
    <string name="pass">pass</string>
    <string name="susername">username</string>
    <string name="spassword">password</string>
    <string name="address_file">address.txt</string>
    <string name="file">.txt</string>
    <string name="saved_file">savedUser.txt</string>
    <string name="denied_coarse">Permission denied to get Coarse Location</string>
    <string name="denied_fine">Permission denied to get Fine Location</string>
</resources>
