<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a100524371.traveltimelog.AddLocation">

    <Button
        android:text="@string/add_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/addCurrentLocation"
        android:onClick="addCurrentLocation"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/address"
        android:ems="10"
        android:layout_marginTop="63dp"
        android:id="@+id/addressTxt"
        android:layout_below="@+id/addCurrentLocation"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/add_by_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addressTxt"
        android:layout_centerHorizontal="true"
        android:id="@+id/addByAddress"
        android:onClick="addByAddress"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/longitude"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/addressTxt"
        android:layout_alignStart="@+id/addressTxt"
        android:id="@+id/longitudeTxt" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/latitude"
        android:ems="10"
        android:layout_below="@+id/longitudeTxt"
        android:layout_alignLeft="@+id/longitudeTxt"
        android:layout_alignStart="@+id/longitudeTxt"
        android:layout_marginTop="11dp"
        android:id="@+id/latitudeTxt" />

    <Button
        android:text="@string/add_by_coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latitudeTxt"
        android:layout_centerHorizontal="true"
        android:id="@+id/addByC"
        android:onClick="addByCoordinates"/>

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/addByC"
        android:layout_toStartOf="@+id/addByC"
        android:onClick="cancel"/>
</RelativeLayout>
