<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a100524371.traveltimelog.registerUser">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:id="@+id/userNameCreate1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/repeat_user_name"
        android:ems="10"
        android:layout_below="@+id/userNameCreate1"
        android:layout_alignRight="@+id/userNameCreate1"
        android:layout_alignEnd="@+id/userNameCreate1"
        android:layout_marginTop="27dp"
        android:id="@+id/userNameCreate2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/password"
        android:ems="10"
        android:layout_below="@+id/userNameCreate2"
        android:layout_alignLeft="@+id/userNameCreate2"
        android:layout_alignStart="@+id/userNameCreate2"
        android:layout_marginTop="36dp"
        android:id="@+id/passwordCreate1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/repeat_password"
        android:ems="10"
        android:layout_below="@+id/passwordCreate1"
        android:layout_alignLeft="@+id/passwordCreate1"
        android:layout_alignStart="@+id/passwordCreate1"
        android:layout_marginTop="44dp"
        android:id="@+id/passwordCreate2" />

    <Button
        android:text="@string/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="24dp"
        android:id="@+id/Create"
        android:onClick="Create"/>

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Create"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:id="@+id/Cancel"
        android:onClick="cancel"/>
</RelativeLayout>
